# IndyDualArm_Sim_cpp

./: CMakeLists.txt  MR_info.json  README.md
include/IndyDualArm/: IndyDualArm.cpp  IndyDualArm.h
include/ModernRobotics/: modern_robotics.cpp  modern_robotics.h
model/: IndyDualArm.urdf
src/: main.cpp  main_backup.cpp
